# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: LintAndTest.yml
page_loader/: __init__.py  arg_parser.py  downloader.py  url_utilities.py
page_loader/scripts/: page_loader.py
tests/: test_all.py  test_behavior.py  test_implementation.py
tests/fixtures/: hexlet-io-courses-files.txt  hpmor-com-files.txt  original_hexlet-io-courses.html  original_test-ru-foo-bar.html  saved_hexlet-io-courses.html  saved_test-ru-foo-bar.html  sheldonbrown-com-harris-bikes-files.txt  sheldonbrown-com-harris-bikes.html  test-ru-foo-bar-files.txt
