[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet educational project for python developer - level 3"
authors = ["MjH.Sakh <48555070+mjh-sakh@users.noreply.github.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education"
]
packages = [
    {include = "page_loader"},
]

repository = "https://github.com/mjh-sakh/python-project-lvl3"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
mypy = "^0.812"
coverage = "^5.5"
requests-mock = "^1.9.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page_loader = 'page_loader.scripts.page_loader:main'